--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-typography": "^2.3.7",
     "gatsby-remark-copy-linked-files": "^2.1.19",
     "gatsby-remark-images": "^3.1.21",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^3.3.13",
     "gatsby-remark-responsive-iframe": "^2.2.16",
     "gatsby-remark-smartypants": "^2.1.8",
     "gatsby-source-filesystem": "^2.1.22",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
+    "lodash": "^4.17.11",
     "prismjs": "^1.17.1",
+    "prop-types": "^15.6.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
